<resources>
    <string name="app_name">JScript</string>
    <string name="app_slogan">Learn With Kind</string>
    <string name="copyright">Copyright © 2021 SHR_Creation. \nAll right reserved</string>
    <string name="url_play_more_apps">https://play.google.com/store/apps/dev?id=5967016763322581246</string>
    <string name="url_play_privacy_policy">https://shrcreation.com/privacy.html</string>
    <string name="play_console_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEArQzE2PNoGbxumq9zzLdUA0rOfBTyutiNt1wu+EqEMxTtC3jDeVQRww+f1f3yjoUhdmxmu0mTuTz6SLfcsxtAfMwVk1eMgVrZ4HjfDLyhkcTTH6pY8sHJZjZl6bOJX/RH0l/gdLjNX2xUpuW1WG2SkyznS0joH0teA6+Q1o2Yg/i5x0/LMyR8B0piIQ/rwHBudmX9JwEuo3TljXgSPcETzxaY3gd2Cs2aAD5uZeljnyhkubJpKhqiOUiPfGTRqybeh4I+9kSSiLVoYviAuZY2GYVsePUtM267QxaUWRPVPu+hscF/zFBAofGfi9CehhzwQjg7MS/TS9XcZbPZ6AtATwIDAQAB</string>
    <string name="play_name">SHR_Creation</string>
    <string name="play_email">shrcreation.media\'@gmail.com</string>
    <string name="play_website">https://www.shrcreation.com</string>
    <string name="play_rate_now">https://play.google.com/store/apps/details?id=com.javascript.jscript</string>
    <string name="share_message">Hey check out this app to learn Javascript:</string>
    <string name="share_message2">Learn, Practice Programs, Play Quiz and Discuss your problems frequently.</string>
    <string name="share_message3">Learn JavaScript start to end with QA &amp; Practice Programs. More than 1000+ Programs.</string>
    <string name="share_message4">Discuss your problems in details with the large JScript QA community.</string>
    <string name="app_id">ca-app-pub-1183995713269973~4276200822</string>
    <string name="banner_ad_unit_id">49ae875268de82cd</string>
    <string name="interstitial_ad_unit_id">d70064df9569d177</string>
    <string name="rewarded_ad_unit_id">ac9520145a00b17a</string>
    <string name="mrec_ad_unit_id">b682896ef3bd11c4</string>
    <string name="native_small_ad_unit_id">0f6e6c5f7b02496e</string>
    <string name="native_medium_ad_unit_id">a6dec7ccd220a3bb</string>
    <string name="applovin_sdk_key">1zWIpgA5ypdhsOvsw5LkOKHivpN2aMwgH0qMm77xmphANnQtbfRSXZTnCvCC_R3fvEXiz37ehgP2UVgypc0MCF</string>
    <string name="press_again_to_exit">Press again to exit app</string>
    <string name="hello">Hello</string>
    <string name="username">Anonymous</string>
    <string name="share">Share</string>
    <string name="title_learn_js">Learn JavaScript</string>
    <string name="title_js">JavaScript</string>
    <string name="title_start_learning">Start Learning</string>
    <string name="topic_basic">Basic</string>
    <string name="topic_advanced">Advanced</string>
    <string name="topic_expert">Expert</string>
    <string name="frameworks">Frameworks</string>
    <string name="libraries">Libraries</string>
    <string name="code_compiler">Test your code here</string>
    <string name="jscript_learn_javascript">JScript : Learn Javascript</string>
    <string name="next">Next</string>
    <string name="next_message">Learn JavaScript A to Z</string>
    <string name="next_message2">Discuss problems with community</string>
    <string name="next_message3">Play Unlimited Quiz</string>
    <string name="get_started">Get Started Learning</string>
    <string name="signup">Sign Up</string>
    <string name="lets_start_learning">Let\'s start learning</string>
    <string name="an_account">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="email2">Email : </string>
    <string name="password">Password</string>
    <string name="password2">Password : </string>
    <string name="register">Register</string>
    <string name="sign_up_policy_message">By clicking Register, you agree to our</string>
    <string name="privacy_term">FAQ, &amp; Privacy Policy</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or_sign_up_with_email">Sign up with Email</string>
    <string name="or_sign_in_with_google">Or Sign in with Google</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="refund_message">* Refunds can be issued only if you send a request for refund within 48 hours of your order. \n\n * To request a refund, you can mail us your order number and date (from your Google Play Order Receipt) to our email: info@shrcreation.com</string>
    <string name="log_in">Sign In</string>
    <string name="login_message">Hello Again!</string>
    <string name="login_message2">Welcome back you\'ve missed!</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="welcome_message">Welcome back, Read our..</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_message">Please enter your registered email address</string>
    <string name="reset_password">Reset Password</string>
    <string name="menu_jscript">Home</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_programs">Programs</string>
    <string name="menu_interview">Interview QA</string>
    <string name="menu_discuss">Discuss</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_pro">PRO</string>
    <string name="feedback">Feedback</string>
    <string name="rate_now">Rate Now</string>
    <string name="follow_us">Follow Us</string>
    <string name="more_apps">More Apps</string>
    <string name="signOut">Sign Out</string>
    <string name="upgrade_pro">Upgrade PRO</string>
    <string name="privacy_policy">Privacy &amp; Policy</string>
    <string name="share_knowledge">Share Knowledge</string>
    <string name="contact_us">Contact Us</string>
    <string name="exclamation">!</string>
    <string name="log_in_details">Info</string>
    <string name="feedback_message">Please provide your message here..</string>
    <string name="feedback_message2">What\'s bothering you! Share anything you want.</string>
    <string name="feedback_email">Write your email here..</string>
    <string name="send">Send</string>
    <string name="dialog_feedback">Feedback Submitted</string>
    <string name="dialog_feed_message">We value every piece of feedback we receive and use it to improve your JScript:Learn Javascript experience.</string>
    <string name="dialog_ok">OK</string>
    <string name="message">Message :</string>
    <string name="version">Version</string>
    <string name="shr_creation">SHR Creation</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">LinkedIn</string>
    <string name="twitter">Twitter</string>
    <string name="play_store">Play Store</string>
    <string name="github">GitHub</string>
    <string name="website">Website</string>
    <string name="link_instagram">https://www.instagram.com/shrcreation4/</string>
    <string name="link_facebook">https://www.facebook.com/shrcreation</string>
    <string name="link_linkedin">https://www.linkedin.com/in/shr-creation-a80602227/</string>
    <string name="link_twitter">https://twitter.com/ShrCreation</string>
    <string name="link_github">https://github.com/shrcreation</string>
    <string name="dialog_close_title">Thank You For Using Our App</string>
    <string name="dialog_close_msg">Before low rate please share your problems. Your ratings and feedback will help us make the app better and deliver the best experience to you.</string>
    <string name="dialog_option_quit">QUIT</string>
    <string name="dialog_option_rate_us">RATE US</string>
    <string name="yes_signout">Yes, SignOut</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_signout">Are you sure you want to signout?</string>
    <string name="we_wish_to_see_you_back_real_soon">We wish to see you back real soon</string>
    <string name="bye">Bye!</string>
    <string name="upgrade_to_pro">Upgrade to PRO</string>
    <string name="congratulations">Congratulations, Welcome to Premium</string>
    <string name="welcome_to_pro">Welcome to Premium</string>
    <string name="pro_des">Celebrate Your Love For Code With PRO Access</string>
    <string name="pro_des_1">Unlimited Access For All PRO Content</string>
    <string name="pro_des_2">Get Job Ready</string>
    <string name="pro_des_3">Free Exclusive Premium Course Updates</string>
    <string name="pro_des_4">Remove Ads</string>
    <string name="pro_des_5">And Much More!</string>
    <string name="try_free_for_7_days">Upgrade to Premium Now</string>
    <string name="_95">95%</string>
    <string name="best_value">BEST VALUE</string>
    <string name="_12_months">Lifetime</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="just_one_tap_to_go">Just one tap to go</string>
    <string name="limited_time_offer">Limited time offer</string>
    <string name="buy_now">Upgrade Now</string>
    <string name="profile_bio_default_text">Add a bio..</string>
    <string name="write_your_profession">Write your profession</string>
    <string name="profession">Profession</string>
    <string name="update_your_profile">Update your profile</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="about_or_bio">About or Bio</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="write_your_facebook_link">Write your facebook link</string>
    <string name="write_your_instagram_link">Write your instagram link</string>
    <string name="write_your_github_link">Write your github link</string>
    <string name="write_your_linkedin_link">Write your linkedin link</string>
    <string name="write_your_twitter_link">Write your twitter link</string>
    <string name="instagram_link">Instagram Link</string>
    <string name="github_link">Github Link</string>
    <string name="linkedin_link">LinkedIn Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="update">Update</string>
    <string name="usernameet">Username</string>
    <string name="write_your_username">Write your username</string>
    <string name="programs_header_image">Programs Header Image</string>
    <string name="javascripts_practice_programs">Practice Programs</string>
    <string name="pro">PRO</string>
    <string name="subjects">Subjects:</string>
    <string name="practice_programs">Practice Programs</string>
    <string name="read_books">Read Books</string>
    <string name="interview_questions_answer">Interview Questions Answers</string>
    <string name="output">Output:</string>
    <string name="app_main_images">App main images</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="how_to">How to?</string>
    <string name="option_1">Option 1</string>
    <string name="quiz_success_message">Congratulations, You can be proud of yourself!</string>
    <string name="quiz_fail_message">Ops ! You Lose the Quiz.</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="wrong_answer">Wrong Answer :</string>
    <string name="correct_answer">Correct Answer :</string>
    <string name="share_your_problems">Write your post here..</string>
    <string name="question">Question:</string>
    <string name="write_your_question">Write your question?</string>
    <string name="descriptions">Descriptions:</string>
    <string name="post">Post</string>
</resources>