<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item0"
        android:title="@string/menu_feeds"
        android:icon="@drawable/ic_feeds_white_24dp"/>

    <item
        android:id="@+id/item1"
        android:title="@string/menu_learn"
        android:icon="@drawable/ic_learn_white_24dp"/>

    <item
        android:id="@+id/item2"
        android:title="@string/menu_discuss"
        android:icon="@drawable/ic_discuss_white_24dp"/>

    <item
        android:id="@+id/item3"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_profile_white_24dp"/>

    <item
        android:id="@+id/item4"
        android:title="@string/menu_pro"
        android:icon="@drawable/ic_pro_white_24dp"/>
</menu>
